// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands workspace foreach can run on public workspaces only 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Test Workspace A
➤ YN0000: Test Workspace C
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should execute 'node' command 1`] = `
Object {
  "code": "ENOENT",
  "stderr": "",
  "stdout": "",
}
`;

exports[`Commands workspace foreach should include dependencies if using --recursive 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Test Workspace A
➤ YN0000: Test Workspace C
➤ YN0000: Test Workspace B
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should never run the scripts on workspaces that match the --exclude list 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: [workspace-c]: Test Workspace C

➤ YN0000: [workspace-d]: Test Workspace D

➤ YN0000: [workspace-e]: Test Workspace E

➤ YN0000: [workspace-f]: Test Workspace F
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should not fall into endless loop if foreach cmd is the same as lifecycle script name 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Test Workspace A
➤ YN0000: Test Workspace B
➤ YN0000: Test Workspace C
➤ YN0000: Test Workspace D
➤ YN0000: Test Workspace E
➤ YN0000: Test Workspace F
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should only run the scripts on workspaces that match the --include list 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: [workspace-a]: Test Workspace A

➤ YN0000: [workspace-b]: Test Workspace B
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should prefix the output with run with --verbose 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: [workspace-a]: Test Workspace A

➤ YN0000: [workspace-b]: Test Workspace B

➤ YN0000: [workspace-c]: Test Workspace C

➤ YN0000: [workspace-d]: Test Workspace D

➤ YN0000: [workspace-e]: Test Workspace E

➤ YN0000: [workspace-f]: Test Workspace F
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should run on current and descendant workspaces by default 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Test Workspace C
➤ YN0000: Test Workspace D
➤ YN0000: Test Workspace E
➤ YN0000: Test Workspace F
➤ YN0000: Done
",
}
`;

exports[`Commands workspace foreach should run scripts in parallel but following the topological order when run with --parallel --topological 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Test Workspace A
➤ YN0000: Test Workspace C
➤ YN0000: Test Workspace B
➤ YN0000: Test Workspace D
➤ YN0000: Test Workspace E
➤ YN0000: Test Workspace F
➤ YN0000: Done
",
}
`;
